Composer details update

--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
   "name": "melisplatform/melis-cms-twig",
-  "description": "Melis platform's alternative templating engine",
+  "description": "Twig as an alternative templating engine in Melis CMS pages",
   "type": "melisplatform-module",
   "license": "OSL-3.0",
   "homepage": "https://github.com/melisplatform/melis-cms-twig",
   "support": {
-  "email": "contact@melistechnology.com",
+    "email": "contact@melistechnology.com",
     "source": "https://github.com/melisplatform/melis-cms-twig",
     "issues": "https://github.com/melisplatform/melis-cms-twig/issues",
-  "docs": "https://www.melistechnology.com/melistechnology/resources/download-documentation/id/17#documentation"
+    "docs": "https://www.melistechnology.com/melistechnology/resources/download-documentation/id/17#documentation"
   },
   "authors": [
-  {
-    "name": "Melis Technology",
-    "email": "contact@melistechnology.com",
-    "homepage": "https://www.melistechnology.com",
-    "role": "Developer"
-  }
+    {
+      "name": "Melis Technology",
+      "email": "contact@melistechnology.com",
+      "homepage": "https://www.melistechnology.com",
+      "role": "Developer"
+    }
   ],
   "keywords": [
     "cms",
@@ -38,7 +38,8 @@
     "melisplatform/melis-core": "*",
     "melisplatform/melis-engine": "*",
     "melisplatform/melis-front": "*",
-    "melisplatform/melis-cms": "*"
+    "melisplatform/melis-cms": "*",
+    "twig/twig": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8"
