--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,47 @@
 {
-  "name": "melisplatform/melis-cms-twig",
-  "description": "Twig as an alternative templating engine in Melis CMS pages",
-  "type": "melisplatform-module",
-  "license": "OSL-3.0",
-  "homepage": "https://github.com/melisplatform/melis-cms-twig",
-  "support": {
-    "email": "contact@melistechnology.com",
-    "source": "https://github.com/melisplatform/melis-cms-twig",
-    "issues": "https://github.com/melisplatform/melis-cms-twig/issues",
-    "docs": "https://www.melistechnology.com/melistechnology/resources/download-documentation/id/17#documentation"
-  },
-  "authors": [
-    {
-      "name": "Melis Technology",
-      "email": "contact@melistechnology.com",
-      "homepage": "https://www.melistechnology.com",
-      "role": "Developer"
-    }
-  ],
-  "keywords": [
-    "cms",
-    "melis",
-    "twig",
-    "zf2",
-    "module"
-  ],
-  "extra": {
-    "module-name": "MelisCmsTwig",
-    "melis-site": false,
-    "dbdeploy": true,
-    "melis-module-category": "cms"
-  },
-  "require": {
-    "php": "^7.0",
-    "ext-openssl": "*",
-    "ext-json": "*",
-    "ext-pdo_mysql": "*",
-    "justinrainbow/json-schema": "5.2.1",
-    "melisplatform/melis-core": "*",
-    "melisplatform/melis-engine": "*",
-    "melisplatform/melis-front": "*",
-    "melisplatform/melis-cms": "*",
-    "twig/twig": "^2.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~4.8"
-  },
-  "autoload": {
-    "psr-4": {
-      "MelisCmsTwig\\": "src/"
-    }
-  }
+	"name": "melisplatform/melis-cms-twig",
+	"description": "Twig as an alternative templating engine in Melis CMS pages",
+	"type": "melisplatform-module",
+	"license": "OSL-3.0",
+	"homepage": "https://github.com/melisplatform/melis-cms-twig",
+	"support": {
+		"email": "contact@melistechnology.com",
+		"source": "https://github.com/melisplatform/melis-cms-twig",
+		"issues": "https://github.com/melisplatform/melis-cms-twig/issues",
+		"docs": "https://www.melistechnology.com/melistechnology/resources/download-documentation/id/17#documentation"
+	},
+	"authors": [
+		{
+			"name": "Melis Technology",
+			"email": "contact@melistechnology.com",
+			"homepage": "https://www.melistechnology.com",
+			"role": "Developer"
+		}
+	],
+	"keywords": [
+		"cms",
+		"melis",
+		"twig",
+		"zf2",
+		"module"
+	],
+	"extra": {
+		"module-name": "MelisCmsTwig",
+		"melis-site": false,
+		"dbdeploy": true,
+		"melis-module-category": "cms"
+	},
+	"require": {
+		"php": "^7.1.3|^7.2|^7.3",
+		"twig/twig": "^2.0",
+		"melisplatform/melis-core": "*",
+		"melisplatform/melis-engine": "*",
+		"melisplatform/melis-front": "*",
+		"melisplatform/melis-cms": "*"
+	},
+	"autoload": {
+		"psr-4": {
+			"MelisCmsTwig\\": "src/"
+		}
+	}
 }
