--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
 		"melis-module-category": "cms"
 	},
 	"require": {
-		"php": "^7.1.3|^7.2|^7.3",
-		"twig/twig": "^2.0",
+		"php": "^7.3|^8.0",
+		"twig/twig": "^3.3",
 		"melisplatform/melis-core": "*",
 		"melisplatform/melis-engine": "*",
 		"melisplatform/melis-front": "*",
