--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,10 @@
 	"require": {
 		"php": "^7.3|^8.0",
 		"twig/twig": "^3.3",
-		"melisplatform/melis-core": "*",
-		"melisplatform/melis-engine": "*",
-		"melisplatform/melis-front": "*",
-		"melisplatform/melis-cms": "*"
+		"melisplatform/melis-core": "^5.0",
+		"melisplatform/melis-engine": "^5.0",
+		"melisplatform/melis-front": "^5.0",
+		"melisplatform/melis-cms": "^5.0"
 	},
 	"autoload": {
 		"psr-4": {
