--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
 	},
 	"require": {
 		"php": "^8.1|^8.3",
-		"twig/twig": "3.8.0",
+		"twig/twig": "^3.8",
 		"melisplatform/melis-core": "*",
 		"melisplatform/melis-engine": "*",
 		"melisplatform/melis-front": "*",
